<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".View.Home.View">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />
            <!-- For fragments -->
            <RelativeLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <bss.intern.planb.WeekView.WeekView
                    android:id="@+id/weekView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:columnGap="8dp"
                    app:dropListenerEnabled="true"
                    app:eventTextColor="@color/white"
                    app:headerColumnPadding="8dp"
                    app:headerRowPadding="18dp"
                    app:hourHeight="60dp"
                    app:noOfVisibleDays="7"
                    app:nowLineColor="@color/gray"
                    app:nowLineThickness="4dp"
                    app:showNowLine="true"
                    app:textSize="12dp"
                    app:todayBackgroundColor="#1848adff" />

                <TextView
                    android:id="@+id/draggable_view"
                    android:layout_width="50dp"
                    android:layout_height="38dp"
                    android:background="@color/colorAccent"
                    android:text="sticky"
                    android:paddingLeft="3dp"
                    android:paddingTop="6dp"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <View
        android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="84dp"
        android:src="@drawable/ic_done"
        android:backgroundTint="@color/green_material"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_close"
        android:backgroundTint="@color/red_material"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="@color/event_color_04"
        android:src="@drawable/ic_question_answer"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="152dp"
        android:backgroundTint="@color/event_color_03"
        android:src="@drawable/ic_flag"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/event_color_02"
        android:src="@drawable/ic_assignment"
        android:visibility="gone" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/plus"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvFabEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="34dp"
        android:text="Event"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvFabTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="104dp"
        android:text="Todo"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvFabGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="172dp"
        android:text="Goal"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvFabMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="240dp"
        android:text="Meeting"
        android:textSize="18sp"
        android:visibility="gone" />

</RelativeLayout>